# ar600_control

./: CMakeLists.txt  README.md  REAMDE.txt  package.xml  setup.py
config/: joints-copy.yaml  joints.yaml
launch/: gazebo.launch  init_ros_control.launch  init_ros_control_legs.launch  start_simulation.launch
scripts/: foot_trajectories.py  footsteps_generator.py  leg_ik.py  leg_joints.py  legs_controller.py  lipm.py  plotter.py  position_transition.py  robot_description.py  robot_gazebo.py  walker.py
