<?xml version="1.0"?>
<package format="2">
  <name>ar600_control</name>
  <version>0.0.0</version>
  <description>The ar600_control package</description>

  <maintainer email="tarasradio@mail.ru">Pavel Tarasov</maintainer>

  <license>MIT</license>

  <author email="markovalex95@gmail.com">Alexey Markov</author>
  <author email="tarasradio@mail.ru">Pavel Tarasov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ar600_description</exec_depend>
  
  <export>
  </export>
</package>
